<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewRegistro"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="#E0E0E0"
        android:gravity="end|center_vertical"
        android:padding="12dp"
        android:text="@string/cero"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/botonC"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/c"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#9E9E9E"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonDividir"/>

    <Button
        android:id="@+id/botonDividir"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dividir"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#FF9800"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistro"
        app:layout_constraintStart_toEndOf="@+id/botonC"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/boton7"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/siete"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton8"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/boton8"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/ocho"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonC"
        app:layout_constraintStart_toEndOf="@+id/boton7"
        app:layout_constraintEnd_toStartOf="@+id/boton9"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/boton9"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/nueve"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonC"
        app:layout_constraintStart_toEndOf="@+id/boton8"
        app:layout_constraintEnd_toStartOf="@+id/botonMultiplicar"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/botonMultiplicar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/multiplicar"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#FF9800"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonDividir"
        app:layout_constraintStart_toEndOf="@+id/boton9"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>


    <Button
        android:id="@+id/boton4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/cuatro"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton5"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/boton5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/cinco"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton8"
        app:layout_constraintStart_toEndOf="@+id/boton4"
        app:layout_constraintEnd_toStartOf="@+id/boton6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/boton6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/seis"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton9"
        app:layout_constraintStart_toEndOf="@+id/boton5"
        app:layout_constraintEnd_toStartOf="@+id/botonMenos"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/botonMenos"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/menos"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#FF9800"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonMultiplicar"
        app:layout_constraintStart_toEndOf="@+id/boton6"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>


    <Button
        android:id="@+id/boton1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/uno"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/boton2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/dos"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton5"
        app:layout_constraintStart_toEndOf="@+id/boton1"
        app:layout_constraintEnd_toStartOf="@+id/boton3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/boton3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/tres"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton6"
        app:layout_constraintStart_toEndOf="@+id/boton2"
        app:layout_constraintEnd_toStartOf="@+id/botonMas"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/botonMas"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/mas"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#FF9800"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/botonMenos"
        app:layout_constraintStart_toEndOf="@+id/boton3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>


    <Button
        android:id="@+id/boton0"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/cero"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonPunto"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/botonPunto"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/punto"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#424242"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton2"
        app:layout_constraintStart_toEndOf="@+id/boton0"
        app:layout_constraintEnd_toStartOf="@+id/botonIgual"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/botonIgual"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/igual"
        android:textSize="36sp"
        android:gravity="center"
        android:backgroundTint="#4CAF50"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/boton3"
        app:layout_constraintStart_toEndOf="@+id/botonPunto"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
